@@ -42,6 +42,7 @@
    USE log_module,           ONLY : log_push, log_pop
    USE timing_module,        ONLY : timing
    USE mp,                   ONLY : mp_bcast
+   USE util_module,          ONLY : zmat_herm
    USE T_control_module,     ONLY : calculation_type, idir => transport_dir, &
                                     datafile_L, datafile_C, datafile_R
    USE T_hamiltonian_module, ONLY : hamiltonian_allocate, ispin,        &
@@ -56,7 +57,7 @@
    ! local variables
    !
    CHARACTER(16) :: subname="hamiltonian_init"
-   INTEGER       :: ierr
+   INTEGER       :: ik, ierr
 
    !
    ! end of declarations
@@ -163,7 +164,28 @@
        !
    END SELECT
 
+   !
+   ! Force hemiticity on blc-on-site hamiltonians and overlaps
+   ! Non-hermiticity can raise due to non-full convergence wrt R-grids and kpt
+   ! in the original WF calculation.
+   !
+   IF ( blc_00C%nkpts /= blc_00L%nkpts ) CALL errore(subname,'unexpected error, nkpts diff',10)
+   IF ( blc_00C%nkpts /= blc_00R%nkpts ) CALL errore(subname,'unexpected error, nkpts diff',11)
+   !
+   DO ik = 1, blc_00C%nkpts
+       !
+       CALL zmat_herm( blc_00C%H(:,:,ik), blc_00C%dim1 )
+       CALL zmat_herm( blc_00C%S(:,:,ik), blc_00C%dim1 )
+       !
+       CALL zmat_herm( blc_00L%H(:,:,ik), blc_00L%dim1 )
+       CALL zmat_herm( blc_00L%S(:,:,ik), blc_00L%dim1 )
+       ! 
+       CALL zmat_herm( blc_00R%H(:,:,ik), blc_00R%dim1 )
+       CALL zmat_herm( blc_00R%S(:,:,ik), blc_00R%dim1 )
+       ! 
+   ENDDO
    
+
    CALL timing( subname, OPR='STOP' )
    CALL log_pop( subname )
    !
